--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,9 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "nuxt3": "latest"
-  },
-  "dependencies": {
-    "sass-loader": "^10.1.1"
+    "fibers": "^5.0.0",
+    "nuxt3": "latest",
+    "sass": "^1.43.4",
+    "sass-loader": "^10.2.0"
   }
 }
