--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,5 +10,12 @@
     "nuxt3": "latest",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0"
+  },
+  "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.24.0",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.3",
+    "serialize": "^0.1.3"
   }
 }
