--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
+    "mysql": "^2.18.1",
     "serialize": "^0.1.3"
   }
 }
