--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,19 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "fibers": "^5.0.0",
-    "nuxt3": "latest",
+    "nuxt3": "^3.0.0-27258467.4e424d0",
+    "postcss": "^8.3.11",
     "sass": "^1.43.4",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "tailwindcss": "^2.2.19"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
+    "esbuild-windows-32": "^0.13.12",
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
     "mysql": "^2.18.1",
