--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "postcss": "^8.3.11",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
-    "tailwindcss": "^2.2.19"
+		"tailwindcss": "3.0.0-alpha.1"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
