--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
     "mysql": "^2.18.1",
-    "serialize": "^0.1.3"
+    "serialize": "^0.1.3",
+    "vue-ionicons": "^3.0.5"
   }
 }
