--- a/Baggend/Properties/launchSettings.json
+++ b/Baggend/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:25089",
+      "applicationUrl": "https://localhost:25089",
       "sslPort": 44389
     }
   },
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:7211;http://localhost:5082",
+      "applicationUrl": "https://localhost:7211;https://localhost:5082",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
