--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "nuxt3": "latest",
+    "nuxt3": "^3.0.0-27324955.23397e6",
     "postcss": "^8.3.11",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
