--- a/dotNET/appsettings.json
+++ b/dotNET/appsettings.json
@@ -10,5 +10,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AllowedOrigins": "https://appextournament.netlify.app"
 }
