--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
     "mysql": "^2.18.1",
