--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
     "mysql": "^2.18.1",
+    "nuxt": "^2.15.8",
     "serialize": "^0.1.3",
+    "vue": "^3.2.29",
     "vue-ionicons": "^3.0.5"
   }
 }
