--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "nuxt3": "^3.0.0-27324955.23397e6",
+    "nuxt3": "latest",
     "postcss": "^8.3.11",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
@@ -21,9 +21,8 @@
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
     "mysql": "^2.18.1",
-    "nuxt": "^2.15.8",
     "serialize": "^0.1.3",
-    "vue": "^3.2.29",
+    "vue": "^3.2.30",
     "vue-ionicons": "^3.0.5"
   }
 }
