--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "nuxt dev",
-    "build": "nuxt build",
+    "dev": "nuxi dev",
+    "build": "nuxi build",
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
@@ -21,8 +21,8 @@
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
     "mysql": "^2.18.1",
+    "npm": "^8.4.1",
     "serialize": "^0.1.3",
-    "vue": "^3.2.30",
     "vue-ionicons": "^3.0.5"
   }
 }
