--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,19 @@
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxi build",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "preview": "nuxi preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "nuxt3": "latest",
+    "nuxt3": "^3.0.0-27405808.7825e2a",
     "postcss": "^8.3.11",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
     "tailwindcss": "3.0.0-alpha.1"
   },
   "dependencies": {
+    "@nuxt/devalue": "^2.0.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
@@ -21,8 +23,8 @@
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
     "mysql": "^2.18.1",
-    "npm": "^8.4.1",
     "serialize": "^0.1.3",
+    "std-env": "^3.0.1",
     "vue-ionicons": "^3.0.5"
   }
 }
