--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "nuxt3": "^3.0.0-27405808.7825e2a",
+    "nuxt3": "latest",
     "postcss": "^8.3.11",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
     "tailwindcss": "3.0.0-alpha.1"
   },
   "dependencies": {
-    "@nuxt/devalue": "^2.0.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
