--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,22 +7,25 @@
     "preview": "nuxi preview"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.2",
     "nuxt3": "latest",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.6",
     "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
-    "tailwindcss": "3.0.0-alpha.1"
+    "tailwindcss": "^3.0.22"
   },
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
+    "@pinia/nuxt": "^0.1.8",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
     "mysql": "^2.18.1",
+    "pinia": "^2.0.11",
     "serialize": "^0.1.3",
+    "vue": "^3.2.30",
     "vue-ionicons": "^3.0.5"
   }
 }
