--- a/dotNET/Tournament.Tests/Tournament.Tests.csproj
+++ b/dotNET/Tournament.Tests/Tournament.Tests.csproj
@@ -6,10 +6,17 @@
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
+    <ProjectReference Include="../Tournament/Tournament.csproj"></ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="fluentassertions" Version="6.5.1" />
+    <PackageReference Include="microsoft.extensions.options" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
+    <PackageReference Include="nsubstitute" Version="4.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.frameworks.autofac" Version="0.5.4" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
