--- a/dotNET/Tournament/Tournament.csproj
+++ b/dotNET/Tournament/Tournament.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.4.0" />
     <PackageReference Include="autofac.extensions.dependencyinjection" Version="7.2.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
     <PackageReference Include="MongoDB.Driver" Version="2.14.0" />
